# obs-remote-plugin

./: .gitignore  CMakeLists.txt  LICENSE  obs-remote.kdev4
.kdev4/: obs-remote.kdev4
cmake/: FindAvahi.cmake  SetUpConfigurations.cmake  findavahi.cmake
data/: config.json
data/locale/: en-US.ini
proto/: protocol.proto
src/: config.cpp  config.hpp  errorhandler.cpp  errorhandler.hpp  obs-remote.cpp  obsremote.cpp  obsremote.hpp  zeroconfdnssd.cpp  zeroconfdnssd.hpp
src/udp/: udpbase.cpp  udpbase.hpp  udpclient.cpp  udpclient.hpp  udpserver.cpp  udpserver.hpp  udpservererrorhandler.hpp
src/ui/: obsremoteabout.cpp  obsremoteabout.hpp  obsremoteabout.ui  obsremotesettings.cpp  obsremotesettings.hpp  obsremotesettings.ui
